MemoryMosaic/Styles/Components/LibraryContentViewer/Thumbnail.scss
.thumbnail {
	position: relative; /* https://stackoverflow.com/a/12365963 */
	cursor: pointer;

	> .star-icon {
		position: absolute;
		bottom: 8px;
		right: 8px;
	}

	> .video-icon {
		position: absolute;
		top: 8px;
		right: 8px;
	}
	
	> .description-icon {
		position: absolute;
		bottom: 8px;
		left: 8px;
	}

	> .checkbox {
		opacity: 0;
		position: absolute;
		top: 8px;
		left: 8px;
	}

	&:hover > .checkbox, .checked { opacity: 1; }
}

div .thumbnail {
	height: 19vh;
	flex-grow: 1;
	margin: 2px;

	> img {
		max-height: 100%;
		min-width: 100%;
		object-fit: cover;
		vertical-align: bottom;
	}

	&:nth-last-of-type(-n+6) { flex-grow: 0; } //I hate this, but it works.
}

